# noise

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODING_STYLE.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  plan.md  ralph_prompt.md
audio-faust/: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  build.rs
audio-faust/.bedrock/: stack.yml
audio-faust/.bedrock/rules/: consent.md  testing.md
audio-faust/.cargo/: config.toml
audio-faust/src/: dsp.rs  factory.rs  ffi.rs  hot_reload.rs  lib.rs  loader.rs  node.rs  watcher.rs
audio-faust/tests/: hot_reload_test.rs  integration_test.rs  loader_test.rs  watcher_test.rs
faust-dsl/: .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
faust-dsl/.bedrock/: stack.yml
faust-dsl/src/faust_dsl/: __init__.py  _canonicalize.py  _codegen.py  _core.py  _dsp.py  _lowering.py  _optimize.py  _primitives.py  ad.py  compose.py  transpile.py
faust-dsl/src/faust_dsl/lib/: __init__.py  filters.py  noise.py  oscillators.py  utilities.py
faust-dsl/src/faust_dsl/music/: __init__.py  effects.py  envelopes.py  scales.py  spatial.py
faust-dsl/tests/: test_ad.py  test_canonicalize.py  test_codegen.py  test_compose.py  test_core.py  test_lib.py  test_music.py  test_optimize.py  test_placeholder.py  test_primitive_hash.py  test_transpile.py
krach/: .gitignore  .pre-commit-config.yaml  PROGRESS.md  THIRD_PARTY_LICENSES  my_session.py  pyproject.toml
krach-engine/: Cargo.toml  README.md
krach-engine/src/: ipc.rs  main.rs
krach-mcp/: README.md  pyproject.toml
krach-mcp/src/krach_mcp/: __init__.py  _patterns.py  _session.py  _tools.py
krach-mcp/tests/: test_node_from_file.py  test_patterns.py  test_status.py
krach/.bedrock/: stack.yml
krach/.bedrock/rules/: code-quality.md
krach/src/krach/: __init__.py  _bind.py  _config.py  _copilot.py  _export.py  _graph.py  _handle.py  _ir_summary.py  _mininotation.py  _mixer.py  _mixer_infra.py  _mixer_module.py  _module_ir.py  _module_proxy.py  _paths.py  _patterns.py  _pitch.py  _scene.py  _types.py  _web_audio.py  config.py  context.md  dsp.py  export.py  mixer.py  module_proxy.py  node_types.py
krach/src/krach/backends/: __init__.py  faust.py  faust_codegen.py  faust_lowering.py  pattern.py  pattern_backend.py  pattern_protocol.py
krach/src/krach/dsl/: __init__.py  ad.py  compose.py  core.py  optimize.py  transpile.py
krach/src/krach/graph/: __init__.py  node.py  proxy.py
krach/src/krach/ir/: __init__.py  canonicalize.py  graph.py  module.py  (+4 more)
krach/tests/: test_config.py  test_copilot.py  test_dependency_invariant.py  test_dsl_ad.py  test_dsl_canonicalize.py  test_dsl_codegen.py  test_dsl_compose.py  test_dsl_core.py  test_dsl_lib.py  test_dsl_music.py  test_dsl_optimize.py  test_dsl_primitive_hash.py  test_dsl_transpile.py  test_dsp_cache.py  test_dsp_graph_roundtrip.py  test_flatten.py  test_graph_key_cache.py  test_ir_summary.py  test_looper_example.py  test_mininotation.py  test_mixer.py  test_mixer_graph.py  test_mixer_handle.py  test_mixer_poly.py  test_mixer_routing.py  test_module.py  test_module_composition_integration.py  test_module_decorator.py  test_module_handle.py  test_module_ir.py  test_module_proxy_composition.py  test_multi_client.py  test_namespace.py  test_path_resolution.py  test_paths.py  test_pattern_api.py  test_pattern_backend.py  test_pattern_bind.py  test_pattern_ir.py  test_pattern_primitives.py  (+15 more)
midiman-frontend/: .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
midiman-frontend/.bedrock/: stack.yml
midiman-frontend/src/midiman_frontend/: __init__.py  ir.py  pattern.py  session.py  transform.py
midiman-frontend/tests/: test_integration.py  test_ir.py  test_pattern.py  test_response.py  test_session.py  test_transform.py  test_validation.py
noise-engine/: Cargo.toml
noise-engine/src/: ipc.rs  main.rs
pattern-engine/: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md
pattern-engine/.bedrock/rules/: iteration.md
pattern-engine/.claude/commands/: remind.md
pattern-engine/.github/workflows/: docs.yml
pattern-engine/examples/: demo.rs  ipc_session.sh
pattern-engine/src/: engine.rs  event.rs  lib.rs  rt.rs  time.rs
pattern-engine/src/ipc/: mod.rs  protocol.rs
pattern-engine/src/ir/: compile.rs  mod.rs  validate.rs
pattern-engine/src/output/: midi.rs  mod.rs  osc.rs
pattern-engine/src/pattern/: curve.rs  mod.rs  query.rs
pattern-engine/src/scheduler/: clock.rs  clock_follower.rs  mod.rs
pattern-engine/tests/: integration_test.rs
pattern-engine/tests/helpers/: mod.rs
soundman/: Cargo.toml
soundman-core/: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md
soundman-core/.claude/commands/: stack.md
soundman-core/.github/workflows/: docs.yml
soundman-core/src/: automation.rs  lib.rs  main.rs  protocol.rs  registry.rs
soundman-core/src/control/: mod.rs  osc.rs
soundman-core/src/engine/: config.rs  mod.rs
soundman-core/src/graph/: compiler.rs  mod.rs  node.rs
soundman-core/src/ir/: mod.rs  types.rs
soundman-core/src/nodes/: dac.rs  gain.rs  mod.rs  oscillator.rs
soundman-core/src/output/: cpal_backend.rs  mod.rs
soundman-core/src/swap/: command.rs  mod.rs
soundman-core/tests/: integration_test.rs
soundman-faust/: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  build.rs
soundman-faust/.claude/: settings.json
soundman-faust/.github/workflows/: docs.yml
soundman-faust/src/: dsp.rs  factory.rs  hot_reload.rs  lib.rs  loader.rs  node.rs  watcher.rs
soundman-faust/tests/: hot_reload_test.rs  integration_test.rs  loader_test.rs  watcher_test.rs
soundman-frontend/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  pyproject.toml
soundman-frontend/.bedrock/: stack.yml
soundman-frontend/.bedrock/rules/: code-quality.md
soundman-frontend/.claude/commands/: init-progress.md  progress.md  qa.md
soundman-frontend/src/soundman_frontend/: __init__.py  graph.py  ir.py  session.py
soundman-frontend/tests/: test_graph.py  test_integration.py  test_ir.py  test_placeholder.py  test_session.py
soundman/src/: main.rs
(+189 files in other folders)
