[package]
name = "audio-faust"
version = "0.1.0"
edition = "2024"

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
audio-engine = { path = "../audio-engine" }
log = "0.4"
notify = "8.2.0"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.27.0"
