[project]
name = "faust-dsl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faust_dsl"]

[dependency-groups]
dev = [
    "hatchling>=1.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pre-commit>=4.0",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
