[project]
name = "krach"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipython>=8",
    "midiman-frontend",
    "soundman-frontend",
    "faust-dsl",
    "anthropic>=0.86.0",
]

[project.scripts]
krach = "krach:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
midiman-frontend = { path = "../midiman-frontend", editable = true }
soundman-frontend = { path = "../soundman-frontend", editable = true }
faust-dsl = { path = "../faust-dsl", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/krach"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1",
    "pytest>=8",
]
