[project]
name = "krach"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faust-dsl",
]

[project.optional-dependencies]
repl = ["ipython>=8"]
copilot = ["anthropic>=0.86.0"]
full = ["ipython>=8", "anthropic>=0.86.0"]

[project.scripts]
krach = "krach:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
faust-dsl = { path = "../faust-dsl", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/krach"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E702"]  # allow semicolons for MIDI note constant tables

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741"]  # allow short var names in tests
