[project]
name = "krach"
version = "0.1.0"
description = "Live coding audio system — define synths in Python, sequence with composable patterns, hear instantly"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Jonas Koehler" },
    { name = "Anyere Bendrien" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "ipython>=8",
]

[project.urls]
Homepage = "https://krach.io"
Repository = "https://github.com/krachio/noise"
Issues = "https://github.com/krachio/noise/issues"

[project.scripts]
krach = "krach.repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]

[tool.hatch.build.targets.wheel]
packages = ["src/krach"]
# _bin/, _lib/, _share/ inside src/krach/ are auto-included by hatchling.
# CI populates them before wheel build; in dev they contain only .gitkeep.

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportPrivateUsage = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E702"]  # allow semicolons for MIDI note constant tables

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741"]  # allow short var names in tests
