[package]
name = "noise-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noise-engine"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
midiman = { path = "../midiman" }
soundman-core = { path = "../soundman-core" }
soundman-faust = { path = "../soundman-faust" }
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin_sleep = "1"
