[package]
name = "pattern-engine"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[dependencies]
arc-swap = "1"
crossbeam-channel = "0.5"
midir = "0.10"
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
spin_sleep = "1"
thread-priority = "1"
