[package]
name = "pattern-engine"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
"cast_precision_loss" = "allow"
"cast_possible_truncation" = "allow"
"cast_sign_loss" = "allow"

[features]
default = ["native"]
native = ["dep:arc-swap", "dep:crossbeam-channel", "dep:midir", "dep:rosc", "dep:spin_sleep", "dep:thread-priority"]

[dependencies]
arc-swap = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
midir = { version = "0.10", optional = true }
rosc = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
spin_sleep = { version = "1", optional = true }
thread-priority = { version = "1", optional = true }
