[package]
name = "soundman"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
