[package]
name = "soundman-core"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[dependencies]
cpal = "0.15"
log = "0.4"
rtrb = "0.3"
env_logger = "0.11"
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
