[project]
name = "soundman-frontend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pyright>=1.1",
    "pytest>=8",
    "pre-commit>=4",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
