[project]
name = "soundman-frontend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-osc>=1.8",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1",
    "pytest>=8",
    "pre-commit>=4",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundman_frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
